# Zendesk-Search-Project

./: MANIFEST.in  README.md  setup.cfg
src/GZProject/: ZendeskSearch.py
src/Zendesk_Search_GZ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
