[metadata]
name = Zendesk-Search-GZ
version = 0.0.6
author = George Zhu
author_email = zhuyanzhao.js@gmail.com
description = A simple zendesk search package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/George-ZHUYZ/Zendesk-Search-Project
project_urls =
    Bug Tracker = https://github.com/George-ZHUYZ/Zendesk-Search-Project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pandas
    inflect

[options.packages.find]
where = src